提交composer到服务器

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
   "name" : "weixia/aligreen",
-  "version" : "1.0.0",
+  "version" : "v0.0.1",
   "license": "MIT",
   "type": "library",
   "require" : {
-    "aliyun/openapi-php-sdk" : "v0.0.1"
+    "aliyun/openapi-php-sdk" : "v0.0.1",
+    "php": ">=5.3"
   },
   "repositories" : [ {
     "type" : "composer",
@@ -14,9 +15,6 @@
     "name": "ruanwenqin",
     "email": "452253895@qq.com"
   }],
-  "require": {
-    "php": ">=5.3"
-  },
   "autoload": {
      "psr-4": { 
        "weixia\\": "green/"
